Bug 28469 - linux: struct timex is not correctly set for 32-bit systems with TIMESIZE=64
Summary: linux: struct timex is not correctly set for 32-bit systems with TIMESIZE=64
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: time (show other bugs)
Version: 2.34
: P2 normal
Target Milestone: 2.35
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-18 20:00 UTC by Adhemerval Zanella
Modified: 2021-10-18 20:45 UTC (History)
0 users

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Adhemerval Zanella 2021-10-18 20:00:53 UTC
On riscv32 there are two regressions:

  FAIL: misc/tst-ntp_gettime
  FAIL: misc/tst-ntp_gettimex

On Linux side, the clock_adjtime syscall (kernel/time/posix-timers.c:1112) which maps to __NR_clock_gettime64 on 32-bit with legacy 32-bit and __NR_clock_gettime otherwise always use __kernel_timex.

Since 32-bit systems with TIMESIZE=64 __USE_TIME_BITS64 is not defined, on suc systems the wrong kernel interface is used.
Comment 1 Adhemerval Zanella 2021-10-18 20:45:27 UTC
Fixed on 2.35.